--- a/Samples/Makefile.current
+++ b/Samples/Makefile.current
@@ -1,16 +1,14 @@
 # -*- mode: makefile; -*-
 #
-# Makefile for fsvn (NTEmacs)
+# Makefile for fsvn
 #
-
-include VERSION
 
 TAR	= tar
 RM	= /bin/rm -f
 
-EMACS	= /cygdrive/c/usr/local/NTEmacs/22.2/bin/emacs.exe
+EMACS	= emacs-current
 
-CONFIG  = MAKE-CFG.el.nt
+CONFIG  = MAKE-CFG.el
 
 FLAGS   = -batch -q -no-site-file -l fsvn-make.el
 
@@ -19,3 +17,4 @@ GOMI	= *.elc *~
 ARCHIVE_DIR_PREFIX = ..
 
 include MAKE-TARGETS
+
